<resources>
    <!-- Application -->
    <string name="app_name">账迹</string>
    <string name="app_version">版本信息：1.0.0</string>

    <!-- Main Activity -->
    <string name="home">首页</string>
    <string name="analyse">分析</string>
    <string name="statistics">统计</string>
    <string name="account">账户</string>

    <!-- Drawer -->
    <string name="setting">设置</string>
    <string name="about">关于</string>
    <string name="drawer_title">帐迹</string>
    <string name="drawer_text">记录和管理您所有账户的收支</string>

    <!-- Top App Bar -->
    <string name="search">搜索</string>
    <string name="dashboard">设置仪表板</string>

    <!-- Home Fragment -->
    <string name="income">收：</string>
    <string name="expenditure">支：</string>
    <string name="current_month_income">本月收入</string>
    <string name="current_month_expenditure">本月支出</string>
    <string name="current_month_balance">本月结余</string>
    <string name="add_trade_info">记一笔</string>

    <!-- Analyse Fragment -->
    <string name="day_analyse">日分析</string>
    <string name="month_analyse">月分析</string>
    <string name="year_analyse">年分析</string>

    <!-- Statistics Fragment -->
    <string name="calendar_statistics">日历</string>
    <string name="list_statistics">列表</string>
    <string name="unconfirmed">取消</string>
    <string name="confirmed">确认</string>

    <!-- Account Fragment -->
    <string name="net_amount">净资产</string>
    <string name="total_amount">总资产</string>
    <string name="negative_amount">负资产</string>
    <string name="add_account">创建新账户</string>

    <!-- Account Details Activity -->
    <string name="account_details">账户详情</string>
</resources>