<?xml version="1.0" encoding="utf-8"?>
<layout>

    <data>

        <variable
            name="acctRvHeader"
            type="com.example.accounting.model.entity.AcctRvHeader" />
    </data>

    <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/card"
            style="?attr/materialCardViewFilledStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="8dp"
            android:layout_marginBottom="8dp"
            android:checkable="false"
            android:clickable="false"
            android:focusable="false">

            <GridLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:columnCount="3"
                android:paddingHorizontal="16dp"
                android:paddingVertical="12dp"
                android:rowCount="2">

                <com.google.android.material.textview.MaterialTextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_row="0"
                    android:layout_column="0"
                    android:layout_columnWeight="1"
                    android:paddingVertical="4dp"
                    android:text="@string/net_amount"
                    android:textSize="14sp" />

                <com.google.android.material.textview.MaterialTextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_row="0"
                    android:layout_column="1"
                    android:layout_columnWeight="1"
                    android:paddingVertical="4dp"
                    android:text="@string/total_amount"
                    android:textSize="14sp" />

                <com.google.android.material.textview.MaterialTextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_row="0"
                    android:layout_column="2"
                    android:layout_columnWeight="1"
                    android:paddingVertical="4dp"
                    android:text="@string/negative_amount"
                    android:textSize="14sp" />

                <com.google.android.material.textview.MaterialTextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_row="1"
                    android:layout_column="0"
                    android:layout_columnWeight="1"
                    android:paddingVertical="4dp"
                    android:textSize="20sp"
                    app:cardAmount="@{acctRvHeader.netAmount}" />

                <com.google.android.material.textview.MaterialTextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_row="1"
                    android:layout_column="1"
                    android:layout_columnWeight="1"
                    android:paddingVertical="4dp"
                    android:textSize="20sp"
                    app:cardAmount="@{acctRvHeader.totalAmount}" />

                <com.google.android.material.textview.MaterialTextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_row="1"
                    android:layout_column="2"
                    android:layout_columnWeight="1"
                    android:paddingVertical="4dp"
                    android:textSize="20sp"
                    app:cardAmount="@{acctRvHeader.negativeAmount}" />

            </GridLayout>

        </com.google.android.material.card.MaterialCardView>

    </FrameLayout>

</layout>